--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'kotlin-kapt'
 }
 
+apply plugin: 'androidx.navigation.safeargs'
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
